# komix

./: README.md  pyproject.toml
.github/workflow/: publish2pypi.yml
.github/workflows/: publish2pypi.yml
src/komix/: __init__.py  api.py  comicinfo.py  hookspecs.py  index.html  main.py  routes.py
src/komix/static/: index.html
