[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "komix"
version = "0.1.1"
description = "Lightweight Comic Book Manager"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Development Status :: 3 - Alpha"
]
keywords = ["pluggy", "fastapi", "ACGN", "comic"]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "fastapi>=0.136.3",
    "pluggy>=1.6.0",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
]

[project.scripts]
komix = "komix.main:app"

[dependency-groups]
dev = [
    "fastapi[standard]>=0.136.3",
    "ruff>=0.15.17",
]

[tool.hatch.build.targets.wheel]
packages = ["src/komix"]
