[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "komix"
authors = [
    {name = "kongolou", email = "kongolou@outlook.com"}
]
maintainers = [
    {name = "kongolou", email = "kongolou@outlook.com"}
]
version = "0.5.2"
description = "Lightweight Comic Book Manager"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Development Status :: 4 - Beta"
]
keywords = ["pluggy", "fastapi", "ACGN", "comic"]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "fastapi>=0.136.3",
    "kominfo>=1.0.0",
    "pluggy>=1.6.0",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
]

[project.scripts]
komix = "komix.main:app"

[dependency-groups]
dev = [
    "fastapi[standard]>=0.136.3",
    "ruff>=0.15.17",
]

[tool.hatch.build.targets.wheel]
packages = ["src/komix"]
